src/test/resources/delivery2/expressions/invalid/semantic/relational/comparingIntAndChar.pas
program Demo;
var
  x, y, z : integer;
  a : boolean;
begin
    a := 100 > 'a';
    writeln(a)
end.